WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12190
REGRESSION: Placeholder text does not reflect dynamic updates
https://bugs.webkit.org/show_bug.cgi?id=12190
Summary
REGRESSION: Placeholder text does not reflect dynamic updates
Matt Lilek
Reported
2007-01-09 22:18:48 PST
If you set a form element's placeholder text via javascript, the update does not take effect on ToT until after it's focused while shipping Safari updates it immediately as expected.
Attachments
Reduction
(244 bytes, text/html)
2007-01-09 22:20 PST
,
Matt Lilek
no flags
Details
patch with change log
(17.99 KB, patch)
2007-01-11 08:54 PST
,
Darin Adler
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matt Lilek
Comment 1
2007-01-09 22:20:31 PST
Created
attachment 12340
[details]
Reduction
Darin Adler
Comment 2
2007-01-11 07:38:46 PST
I have a fix.
Darin Adler
Comment 3
2007-01-11 08:54:00 PST
Created
attachment 12363
[details]
patch with change log
Adam Roben (:aroben)
Comment 4
2007-01-11 09:45:53 PST
Comment on
attachment 12363
[details]
patch with change log + if (!wasDirty) + document()->frame()->textFieldDidBeginEditing(input); + document()->frame()->textDidChangeInTextField(input); Do you need to null-check document() and/or frame() here? r=me
Darin Adler
Comment 5
2007-01-15 20:11:09 PST
(In reply to
comment #4
)
> Do you need to null-check document() and/or frame() here?
No on document(), yes on frame().
Darin Adler
Comment 6
2007-01-15 21:01:32 PST
Committed revision 18877.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug